# just-a-python-thing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirement-dev.txt  rpg.txt
src/hello_package/: example.py
