[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld"
version = "2025.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.1.2"
]

[project.scripts]
helloworld = "hello_package.helloworld:main"
numpydemo = "hello_package.example:main"
